Fix build.gradle and dir